--- a/index.html
+++ b/index.html
@@ -15,30 +15,44 @@
 
   <div class=column>
     <div class="text">
-    Sit back, relax and choose a picture to colour in.
+      Sit back, relax and choose a picture to colour in.
     </div>
 
     <div class="image_selector">
-    <input class="image" id="image1" type="image"
-    src="https://images.squarespace-cdn.com/content/v1/51603d39e4b0e13a25868eae/1499713607674-YNEKTRTR61UUAY39IHDU/ke17ZwdGBToddI8pDm48kKIMDjAtslzpSbNWOLTaRwx7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QHyNOqBUUEtDDsRWrJLTmS0k9nmfOWkBD2X4dgpGrpfvUWmq0O8-xzDea1HwyPHZEWk-7rT3ush37ttw9UQzO/ChevronTile"
-    onclick="selectimage('image1')" />
+      <input class="image" id="image1" type="image"
+      src="https://images.squarespace-cdn.com/content/v1/51603d39e4b0e13a25868eae/1499713607674-YNEKTRTR61UUAY39IHDU/ke17ZwdGBToddI8pDm48kKIMDjAtslzpSbNWOLTaRwx7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QHyNOqBUUEtDDsRWrJLTmS0k9nmfOWkBD2X4dgpGrpfvUWmq0O8-xzDea1HwyPHZEWk-7rT3ush37ttw9UQzO/ChevronTile"
+      onclick="selectimage('image1')" />
 
-    <input class="image" id="image2" type="image"
-    src="https://st.depositphotos.com/1388281/1343/v/950/depositphotos_13435957-stock-illustration-abstract-black-white-design.jpg"
-    onclick="selectimage('image2')"/>
+      <input class="image" id="image2" type="image"
+      src="https://sftextures.com/texture/2705/0/2703/primitives-shades-of-grey-basic-math-figures-lines-light-white-gray-colors-wallpaper-pattern-texture-256x256.jpg"
+      onclick="selectimage('image2')"/>
 
-    <input class="image" id="image3" type="image"
-    src="https://images-na.ssl-images-amazon.com/images/I/61Z2JVe10wL._SY300_QL70_.jpg"
-    onclick="selectimage('image3')"/>
+      <input class="image" id="image3" type="image"
+      src="https://images-na.ssl-images-amazon.com/images/I/61Z2JVe10wL._SY300_QL70_.jpg"
+      onclick="selectimage('image3')"/>
 
-    <input class="image" id="image4" type="image"
-    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT99PBykyf6guvoaDh7tMzRtFXhoENT6JZzH6dQiu06elUOKzht&s"
-    onclick="selectimage('image4')"/>
+      <input class="image" id="image4" type="image"
+      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT99PBykyf6guvoaDh7tMzRtFXhoENT6JZzH6dQiu06elUOKzht&s"
+      onclick="selectimage('image4')"/>
 
-    <input class="image" id="image5" type="image"
-    src="https://cdn.shopify.com/s/files/1/0285/1316/products/JUB-0030-WALP-WP-1_2048x.JPG?v=1560158733"
-    onclick="selectimage('image5')"/>
+      <input class="image" id="image5" type="image"
+      src="https://cdn.shopify.com/s/files/1/0285/1316/products/JUB-0030-WALP-WP-1_2048x.JPG?v=1560158733"
+      onclick="selectimage('image5')"/>
+
+      <input class="image" id="image6" type="image"
+      src="http://www.tilerestyle.com/Moroccan_lantern_pattern_grey.jpg"
+      onclick="selectimage('image6')"/>
+
+      <input class="image" id="image7" type="image"
+      src="https://luvly.co/uploads/cache/items/2013/03/61/147e41a0c5af177f9f75cf02e8f6f282-1be2bc553bb0f66a706c240714c2fca8-600x.jpg"
+      onclick="selectimage('image7')"/>
+
+      <input class="image" id="image8" type="image"
+      src="https://www.ilovewallpaper.co.uk/images/prosecco-sparkle-marble-wallpaper-white-silver-p4764-12927_thumb.jpg"
+      onclick="selectimage('image8')"/>
+
     </div>
+  </div>
 
     <div id="sketchpadapp">
       <div class="drawing">
@@ -60,6 +74,15 @@
       <input type="submit" value="Clear all" id="clearbutton" onclick="clearCanvas(canvas,ctx);">
     </div>
   </div>
+
+  <div class = "column2">
+    <div class="buttons">
+      <button type = "submit" id="nextpage" onclick = "nextPage()">
+      Cheer me up <br /> (your picture will be lost)
+      </button>
+    </div>
+  </div>
+
 
  </body>
 </html>
