Add navigation buttons
Add home button and button for next page.

--- a/cheer_up.html
+++ b/cheer_up.html
@@ -12,5 +12,11 @@
 
   <body>
 
+    <div class="buttons">
+      <button type = "submit" class="navButton" id="homepage" onclick = "homePage()">
+      I want to draw again!
+      </button>
+    </div>
+
   </body>
   </html>
