--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <div class = "column2">
     <div class="buttons">
-      <button type = "submit" id="nextpage" onclick = "nextPage()">
+      <button type = "submit" class="navButton" id="cheerpage" onclick = "cheerPage()">
       Cheer me up <br /> (your picture will be lost)
       </button>
     </div>
