--- a/cheer_up.html
+++ b/cheer_up.html
@@ -14,7 +14,7 @@
 
     <div class="buttons">
       <button type = "submit" class="navButton" id="homepage" onclick = "homePage()">
-      I want to draw again!
+      I want to draw again please
       </button>
     </div>
 
