--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <link rel="stylesheet" href="styles.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
     <script type="text/javascript" src="/Users/sarahardin/Documents/GitHub/website/packages/iro/iro.js"></script>
     <script type="text/javascript" src="scripts.js" async></script>
   </head>
@@ -78,7 +79,7 @@
   <div class = "column2">
     <div class="buttons">
       <button type = "submit" class="navButton" id="cheerpage" onclick = "cheerPage()">
-      Cheer me up <br /> (your picture will be lost)
+      Cheer me up please<br /> (your picture will be lost)
       </button>
     </div>
   </div>
