More changing links

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <link rel="stylesheet" href="styles.css"/>
     <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
-    <script type="text/javascript" src="/Users/sarahardin/Documents/GitHub/website/packages/iro/iro.js"></script>
+    <script type="text/javascript" src="packages/iro/iro.js"></script>
     <script type="text/javascript" src="scripts.js" async></script>
   </head>
 
