--- a/cheer_up.html
+++ b/cheer_up.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="styles.css"/>
-    <script type="text/javascript" src="/Users/sarahardin/Documents/GitHub/website/packages/iro/iro.js"></script>
+    <script type="text/javascript" src="packages/iro/iro.js"></script>
     <script type="text/javascript" src="scripts.js" async></script>
   </head>
 
