Second page additions

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <div class = "column2">
     <div class="buttons">
       <button type = "submit" class="navButton" id="cheerpage" onclick = "cheerPage()">
-      Cheer me up please<br /> (your picture will be lost)
+      Cheer me up please<br /> (your drawing will be lost)
       </button>
     </div>
   </div>
