--- a/cheer_up.html
+++ b/cheer_up.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <link rel="stylesheet" href="styles.css"/>
     <script type="text/javascript" src="packages/iro/iro.js"></script>
     <script type="text/javascript" src="scripts.js" async></script>
