Column second page

--- a/cheer_up.html
+++ b/cheer_up.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <link rel="stylesheet" href="styles.css"/>
     <script type="text/javascript" src="packages/iro/iro.js"></script>
     <script type="text/javascript" src="scripts.js" async></script>
@@ -11,6 +11,7 @@
   <title>A tint of calm</title>
 
   <body>
+  <div class="column">
     <h1 id='main_title'> A tint of calm </h1>
 
     <div class="buttons">
@@ -49,7 +50,7 @@
     <li>Charlie Chaplin once entered a Charlie Chaplin look alike contest and lost.</li>
     <li>Humans can laugh and smile before they can speak.</li>
     </div>
-
+  </div>
 
   </body>
   </html>
